# withvLLm-d

./: .dockerignore  .env.example  .gitignore  .graphifyignore  CODE_REVIEW.md  Dockerfile  Dockerfile.sandbox  README.md  SETUP.md  docker-compose.yml  initial_plan.md  main.html  pyproject.toml  requirements.txt  setup.sh  setup_nemo.md  task_11_implementation_plan.md
assets/diagrams/: agent_pipeline_flow.drawio  architecture_diagram.drawio
data/: README.md  incident_response_playbook_dataset.jsonl
docs/: CLEAN_CODE_SOLID_REVIEW.md  config-reference.md  plan-01-cache.md  plan-02-rag-pinecone.md  plan-03-cutover-siem.md  plan-03B-process-all-fix.md  plan-04-cutover-threat-intel.md  plan-05-cutover-cmdb.md  production_data_architecture.md
docs/reviews/: CLEAN_CODE_SOLID_REVIEW.md  CODE_REVIEW.md
scripts/: install-host.sh  run-host-vllm.sh  setup.sh
soc-claw/: README.md  blueprint.yaml  pipeline.py  requirements.txt  utils.py
soc-claw/agents/: response_agent.py  triage_agent.py  verifier_agent.py
soc-claw/benchmark/: harness.py
soc-claw/config/: nemoclaw_policy.yaml  privacy_routes.yaml
soc-claw/data/: mitre_techniques.json  threat_intel.json
soc-claw/tools/: __init__.py  asset_lookup.py  ip_reputation.py  mitre_lookup.py  response_tools.py
soc-claw/ui/: app.py  server.py
soc-claw/ui/templates/: index.html
soc_claw/: audit.py  cache.py  guardrails.py  logging_config.py  pipeline.py  telemetry.py  utils.py
soc_claw/agents/: response_agent.py  triage_agent.py  verifier_agent.py
soc_claw/backend/: auth.py  security.py  server.py
soc_claw/backend/routers/: api.py
soc_claw/backend/routes/: siem_webhook.py
soc_claw/benchmark/: harness.py
soc_claw/config/: nemoclaw_policy.yaml  routing.yaml
soc_claw/connectors/: dlq_reprocessor.py  gcs_reader.py  kafka_consumer.py  kafka_producer.py  output_gcp.py
soc_claw/data_code/: generate_cmdb.py  threat_intelligence_loader.py
soc_claw/frontend/templates/: index.html  login.html
soc_claw/llm/: __init__.py  caller.py  client.py  json_extract.py
soc_claw/mock_data/: README.md
soc_claw/rag/: __init__.py  embed.py  index.py  mitre.py  pinecone_client.py  retrieve.py
soc_claw/tools/: asset_lookup.py  ip_reputation.py  mitre_lookup.py  response_tools.py
src/blue_lantern/: __init__.py  cache.py  pipeline.py  schemas.py  utils.py
src/blue_lantern/agents/: response_agent.py  triage_agent.py  verifier_agent.py
src/blue_lantern/backend/: auth.py  (+2 more)
tests/: test_cache.py  test_cache_redis.py  test_dlq_kafka.py  test_gcp_output.py  test_job_manager.py  test_kafka.py  test_logging_config.py  test_rag.py  test_security_config.py  test_siem_mappers.py  test_tools_smoke.py
(+44 files in other folders)
