[project]
name = "soc-claw"
version = "0.1.0"
description = "Multi-agent SOC incident response coordinator"
requires-python = ">=3.11"
authors = [{ name = "SOC-Claw" }]
dependencies = [
    "openai>=1.30",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-dotenv>=1.0",
    "pyyaml",
    "pydantic>=2.6",
    "bcrypt>=4.0",
    "starlette-csrf>=3.0",
    "itsdangerous>=2.0",
    "python-multipart>=0.0.7",
    "python-json-logger>=3.2",
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29,<2",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<0.51",
    "opentelemetry-instrumentation-httpx>=0.50b0,<0.51",
    "fastapi-guard>=7.0.0",
    "cachetools>=5.3",
    "redis>=5",
]

# vLLM is intentionally NOT a project dependency. It is a host-only GPU
# runtime with a CUDA-aware install path; install it separately:
#   uv pip install vllm --torch-backend=auto
# See SETUP.md.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["soc_claw"]

[tool.hatch.build.targets.wheel.force-include]
"soc_claw/mock_data" = "soc_claw/mock_data"
"soc_claw/config" = "soc_claw/config"
"soc_claw/frontend/templates" = "soc_claw/frontend/templates"
